--- a/assignmentTable1.html
+++ b/assignmentTable1.html
@@ -6,7 +6,7 @@
     <title>Gold Prices Comparison</title>
     <style>
         .center-div {
-            width: 50%; 
+            width: 70%; 
             margin-left: auto;
             margin-right: auto;
             text-align: center; 
@@ -19,11 +19,11 @@
             <h1>Gold Prices Comparison</h1>
             <thead>
                 <tr>
-                    <th><h2>Gold Quality</h2></th>
+                    <th rowspan="2"><h2>Gold Quality</h2></th>
                     <th colspan="2"><h2>Price</h2></th>
                 </tr>
                 <tr>
-                    <th></th>
+                    
                     <th><h3>USD</h3></th>
                     <th><h3>INR</h3></th>
                 </tr>
